# schnorr-musig2-blueprint

./: .gitignore  Cargo.toml  flake.nix  remappings.txt
contracts/src/: SchnorrkelMuSigBlueprint.sol
src/: context.rs  lib.rs  main.rs  signing.rs  signing_state_machine.rs
tests/: schnorrkel.rs
